--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
+    
+    <!-- Meta -->
     <meta name="keywords" content="restaurante puerto sagunto, playa puerto sagunto, cuina de mar, comida casera, repostería casera, vinos, arroces, tapas, juan y maria josé, bar lonja, restaurante lonja, lonja puerto sagunto, buena comida, donde comer bien, sagunto">
     <meta name="description" content="Lonja es un restaurante ubicado en Puerto de Sagunto en el que ofrecemos productos de primera calidad y una atención al cliente excepcional. Haga su reserva en el +34 962 67 20 38">
     <meta name="author" content="Restaurante Lonja">
     <meta name="copyright" content="Restaurante Lonja">
-    <meta name="robots" content="index,follow">
-    <meta name="google-site-verification" content="IflDBYktL1QL5ZhnywhPiBubcGO_RFNUhULNxVpoXcs">
 
-    <title>Lonja | Cuina de Mar · Restaurante & Terraza</title>
+    <title>Lonja · Restaurante | Terraza</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.gif" type="image/x-icon">
@@ -201,21 +201,21 @@
                 <li class="col-md-4 col-sm-3 col-xs-12">
                   <div class="mu-single-counter">
                     <span>Años de Servicio</span>
-                    <h3><span class="counter-value" data-count="50">0</span><sup>+</sup></h3>
+                    <h3><span class="counter-value" data-count="65">0</span><sup>+</sup></h3>
                   </div>
                 </li>
 
                 <li class="col-md-4 col-sm-3 col-xs-12">
                   <div class="mu-single-counter">
                     <span>Reseñas Positivas</span>
-                    <h3><span class="counter-value" data-count="1000">0</span><sup>+</sup></h3>
+                    <h3><span class="counter-value" data-count="950">0</span><sup>+</sup></h3>
                   </div>
                 </li>
 
                  <li class="col-md-4 col-sm-3 col-xs-12">
                   <div class="mu-single-counter">
                     <span>Clientes Satisfechos</span>
-                    <h3><span class="counter-value" data-count="25000">0</span><sup>+</sup></h3>
+                    <h3><span class="counter-value" data-count="28000">0</span><sup>+</sup></h3>
                   </div>
                 </li>
 
@@ -977,10 +977,10 @@
                   <div class="mu-contact-right">
                     <div class="mu-contact-widget">
                       <h3>Información</h3>
-                      <p>Restaurante Lonja se encuentra ubicado en el Puerto de Sagunto, a tan solo 60 metros de la playa.</p>
+                      <p>Restaurante Lonja se encuentra ubicado en el Puerto de Sagunto, a tan solo 90 metros de la playa.</p>
                       <p>Solo se admiten reservas por teléfono.</p>
                       <address>
-                        <p><i class="fa fa-phone"></i> 962 67 20 38</p>
+                        <p><i class="fa fa-phone"></i>962 67 20 38</p>
                         <p><i class="fa fa-envelope-o"></i>juanlonja4@hotmail.com</p>
                         <p><i class="fa fa-map-marker"></i>Av. Mediterráneo, 36, 46520 Port de Sagunt, Valencia</p>
                       </address>
