--- a/index.html
+++ b/index.html
@@ -670,18 +670,15 @@
                 <a
                   href="https://www.facebook.com/RestauranteLonja/"
                   target="”_blank”"
-                  ><span class="fa fa-facebook"></span
-                ></a>
+                  ><i class="fa-brands fa-facebook-f"></i></a>
                 <a
                   href="https://www.google.es/maps/place/Restaurante+Lonja/@39.6592413,-0.213512,17z/data=!4m12!1m6!3m5!1s0xd60161afd533b4d:0x3341f81777ddebc4!2sRestaurante+Lonja!8m2!3d39.6591804!4d-0.2133869!3m4!1s0xd60161afd533b4d:0x3341f81777ddebc4!8m2!3d39.6591804!4d-0.2133869?hl=es"
                   target="”_blank”"
-                  ><span class="fa fa-google-plus"></span
-                ></a>
+                  ><i class="fa-brands fa-google-plus-g"></i></a>
                 <a
                   href="https://www.instagram.com/restaurantelonja/?hl=es"
                   target="”_blank”"
-                  ><span class="fa fa-instagram"></span
-                ></a>
+                  ><i class="fa-brands fa-instagram"></i></a>
               </div>
               <div class="mu-footer-copyright">
                 <p>
