--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
+            <div class="carousel-caption">
+              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
+            </div>
           </div>
 
           <!-- Top slider single slide -->
@@ -185,6 +188,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
+            <div class="carousel-caption">
+              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
+            </div>
           </div>
           <!-- / Top slider single slide -->
 
@@ -205,6 +211,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
+            <div class="carousel-caption">
+              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
+            </div>
           </div>
           <!-- / Top slider single slide -->
         </div>
@@ -617,15 +626,11 @@
                         <address>
                           <p><span>Lunes</span> CERRADO</p>
                           <p><span>Martes</span> CERRADO</p>
-                          <p><span>Miércoles</span> 12:30 - 15:30</p>
-                          <p><span>Jueves</span> 12:30 - 15:30</p>
-                          <p>
-                            <span>Viernes</span> 12:30 - 15:30 | 20:30 - 23:30
-                          </p>
-                          <p>
-                            <span>Sábado</span> 12:30 - 15:30 | 20:30 - 23:30
-                          </p>
-                          <p><span>Domingo</span> 12:30 - 15:30</p>
+                          <p><span>Miércoles</span> 12:30 - 15:30  | 20:30 - 23:30</p>
+                          <p><span>Jueves</span> 12:30 - 15:30  | 20:30 - 23:30</p>
+                          <p><span>Viernes</span> 12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Sábado</span> 12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Domingo</span> 12:30 - 15:30  | 20:30 - 23:30</p>
                         </address>
                       </div>
                     </div>
