--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!--<div class="carousel-caption">
               <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>
+            </div>-->
           </div>
 
           <!-- Top slider single slide -->
@@ -189,9 +189,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!--<div class="carousel-caption">
               <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>
+            </div>-->
           </div>
           <!-- / Top slider single slide -->
 
@@ -212,9 +212,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!--<div class="carousel-caption">
               <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>
+            </div>-->
           </div>
           <!-- / Top slider single slide -->
         </div>
@@ -627,11 +627,11 @@
                         <address>
                           <p><span>Lunes</span> CERRADO</p>
                           <p><span>Martes</span> CERRADO</p>
-                          <p><span>Miércoles</span> 12:30 - 15:30  | 20:30 - 23:30</p>
-                          <p><span>Jueves</span> 12:30 - 15:30  | 20:30 - 23:30</p>
+                          <p><span>Miércoles</span> 12:30 - 15:30</p>
+                          <p><span>Jueves</span> 12:30 - 15:30</p>
                           <p><span>Viernes</span> 12:30 - 15:30 | 20:30 - 23:30</p>
                           <p><span>Sábado</span> 12:30 - 15:30 | 20:30 - 23:30</p>
-                          <p><span>Domingo</span> 12:30 - 15:30  | 20:30 - 23:30</p>
+                          <p><span>Domingo</span> 12:30 - 15:30</p>
                         </address>
                       </div>
                     </div>
