--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link href="assets/css/font-awesome.css" rel="stylesheet" />
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
+
     <!-- Slick slider -->
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
     <!-- Date Picker -->
@@ -167,9 +168,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <!--<div class="carousel-caption">
-              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>-->
+            <div class="carousel-caption">
+              <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
+            </div>
           </div>
 
           <!-- Top slider single slide -->
@@ -189,9 +190,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <!--<div class="carousel-caption">
-              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>-->
+            <div class="carousel-caption">
+              <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
+            </div>
           </div>
           <!-- / Top slider single slide -->
 
@@ -212,9 +213,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <!--<div class="carousel-caption">
-              <p class="carousel-text">Los meses de julio y agosto abrimos de miércoles a domingo en horario de comidas y cenas.</p>
-            </div>-->
+            <div class="carousel-caption">
+              <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
+            </div>
           </div>
           <!-- / Top slider single slide -->
         </div>
@@ -625,13 +626,13 @@
                       <div class="mu-contact-widget">
                         <h3>Horario</h3>
                         <address>
-                          <p><span>Lunes</span> CERRADO</p>
-                          <p><span>Martes</span> CERRADO</p>
-                          <p><span>Miércoles</span> 12:30 - 15:30</p>
-                          <p><span>Jueves</span> 12:30 - 15:30</p>
-                          <p><span>Viernes</span> 12:30 - 15:30 | 20:30 - 23:30</p>
-                          <p><span>Sábado</span> 12:30 - 15:30 | 20:30 - 23:30</p>
-                          <p><span>Domingo</span> 12:30 - 15:30</p>
+                          <p><span>Lunes</span> CERRADO POR VACACIONES</p>
+                          <p><span>Martes</span> CERRADO POR VACACIONES</p>
+                          <p><span>Miércoles</span> CERRADO POR VACACIONES</p>
+                          <p><span>Jueves</span> CERRADO POR VACACIONES</p>
+                          <p><span>Viernes</span> CERRADO POR VACACIONES</p>
+                          <p><span>Sábado</span> CERRADO POR VACACIONES</p>
+                          <p><span>Domingo</span> CERRADO POR VACACIONES</p>
                         </address>
                       </div>
                     </div>
