--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                     <a href="#tapas" data-toggle="tab">Tapas</a>
                   </li>
                   <li><a href="#platos" data-toggle="tab">Platos</a></li>
+                  <li><a href="#ensaladas" data-toggle="tab">Ensaladas</a></li>
                   <li><a href="#tintos" data-toggle="tab">Tintos</a></li>
                   <li><a href="#blancos" data-toggle="tab">Blancos</a></li>
                 </ul>
@@ -359,6 +360,14 @@
                     <div class="mu-tab-content-area">
                       <a href="#">
                         <img src="assets/img/menu/platos.jpg" alt="img" />
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="tab-pane fade" id="ensaladas">
+                    <div class="mu-tab-content-area">
+                      <a href="#">
+                        <img src="assets/img/menu/ensaladas.jpg" alt="img" />
                       </a>
                     </div>
                   </div>
