--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!--<div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
-            </div>
+            </div>-->
           </div>
 
           <!-- Top slider single slide -->
@@ -190,9 +190,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!--<div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
-            </div>
+            </div>-->
           </div>
           <!-- / Top slider single slide -->
 
@@ -213,9 +213,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 11 de diciembre al 9 de enero.</p>
-            </div>
+            </div>-->
           </div>
           <!-- / Top slider single slide -->
         </div>
@@ -635,13 +635,13 @@
                       <div class="mu-contact-widget">
                         <h3>Horario</h3>
                         <address>
-                          <p><span>Lunes</span> CERRADO POR VACACIONES</p>
-                          <p><span>Martes</span> CERRADO POR VACACIONES</p>
-                          <p><span>Miércoles</span> CERRADO POR VACACIONES</p>
-                          <p><span>Jueves</span> CERRADO POR VACACIONES</p>
-                          <p><span>Viernes</span> CERRADO POR VACACIONES</p>
-                          <p><span>Sábado</span> CERRADO POR VACACIONES</p>
-                          <p><span>Domingo</span> CERRADO POR VACACIONES</p>
+                          <p><span>Lunes</span>CERRADO</p>
+                          <p><span>Martes</span>CERRADO</p>
+                          <p><span>Miércoles</span>12:30 - 15:30</p>
+                          <p><span>Jueves</span>12:30 - 15:30</p>
+                          <p><span>Viernes</span>12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Sábado</span>12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Domingo</span>12:30 - 15:30</p>
                         </address>
                       </div>
                     </div>
