--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 9 de diciembre al 7 de enero.</p>
-            </div>
-          </div>
+            </div> -->
+          </div> 
 
           <!-- Top slider single slide -->
           <div class="mu-top-slider-single">
@@ -190,10 +190,10 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 9 de diciembre al 7 de enero.</p>
-            </div>
-          </div>
+            </div> -->
+          </div> 
           <!-- / Top slider single slide -->
 
           <!-- Top slider single slide -->
@@ -213,9 +213,9 @@
               </a>
             </div>
             <!-- / Top slider content -->
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
               <p class="carousel-text">Cerrado por vacaciones del 9 de diciembre al 7 de enero.</p>
-            </div>
+            </div> -->
           </div>
           <!-- / Top slider single slide -->
         </div>
@@ -656,17 +656,14 @@
                     <div class="mu-contact-right">
                       <div class="mu-contact-widget">
                         <h3>Horario</h3>
-                        <p>
-                          Cerrado por vacaciones hasta el 7 de enero.
-                        </p>
                         <address>
                           <p><span>Lunes</span>CERRADO</p>
                           <p><span>Martes</span>CERRADO</p>
-                          <p><span>Miércoles</span>CERRADO</p>
-                          <p><span>Jueves</span>CERRADO</p>
-                          <p><span>Viernes</span>CERRADO</p>
-                          <p><span>Sábado</span>CERRADO</p>
-                          <p><span>Domingo</span>CERRADO</p>
+                          <p><span>Miércoles</span>12:30 - 15:30</p>
+                          <p><span>Jueves</span>12:30 - 15:30</p>
+                          <p><span>Viernes</span>12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Sábado</span>12:30 - 15:30 | 20:30 - 23:30</p>
+                          <p><span>Domingo</span>12:30 - 15:30</p>
                         </address>
                       </div>
                     </div>
