--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <br />
                     <p>
                       El género que ofrecemos es principalmente productos del
-                      mar, pescado fresco de lonja, arroces y carnes de primera
+                      mar, pescado fresco de lonja y carnes de primera
                       calidad, acompañado de una amplia carta de vinos, cavas y
                       champán, todo ello culminado con una gran repostería
                       casera.
@@ -323,7 +323,7 @@
                     <div class="mu-single-counter">
                       <span>Reseñas Positivas</span>
                       <h3>
-                        <span class="counter-value" data-count="950">0</span
+                        <span class="counter-value" data-count="1150">0</span
                         ><sup>+</sup>
                       </h3>
                     </div>
@@ -333,7 +333,7 @@
                     <div class="mu-single-counter">
                       <span>Clientes Satisfechos</span>
                       <h3>
-                        <span class="counter-value" data-count="28000">0</span
+                        <span class="counter-value" data-count="30000">0</span
                         ><sup>+</sup>
                       </h3>
                     </div>
@@ -373,7 +373,7 @@
                   <div class="tab-pane fade in active" id="tapas">
                     <div class="mu-tab-content-area">
                       <a href="#">
-                        <img src="assets/img/menu/tapas.jpg" alt="img" />
+                        <img src="assets/img/menu/tapas.png" alt="img" />
                       </a>
                     </div>
                   </div>
@@ -381,7 +381,7 @@
                   <div class="tab-pane fade" id="platos">
                     <div class="mu-tab-content-area">
                       <a href="#">
-                        <img src="assets/img/menu/platos.jpg" alt="img" />
+                        <img src="assets/img/menu/platos.png" alt="img" />
                       </a>
                     </div>
                   </div>
@@ -389,7 +389,7 @@
                   <div class="tab-pane fade" id="ensaladas">
                     <div class="mu-tab-content-area">
                       <a href="#">
-                        <img src="assets/img/menu/ensaladas.jpg" alt="img" />
+                        <img src="assets/img/menu/ensaladas.png" alt="img" />
                       </a>
                     </div>
                   </div>
@@ -397,7 +397,7 @@
                   <div class="tab-pane fade" id="tintos">
                     <div class="mu-tab-content-area">
                       <a href="#">
-                        <img src="assets/img/menu/tintos.jpg" alt="img" />
+                        <img src="assets/img/menu/tintos.png" alt="img" />
                       </a>
                     </div>
                   </div>
@@ -405,7 +405,7 @@
                   <div class="tab-pane fade" id="blancos">
                     <div class="mu-tab-content-area">
                       <a href="#">
-                        <img src="assets/img/menu/blancos.jpg" alt="img" />
+                        <img src="assets/img/menu/blancos.png" alt="img" />
                       </a>
                     </div>
                   </div>
@@ -701,7 +701,7 @@
                   target="”_blank”"
                   ><i class="fa-brands fa-facebook-f"></i></a>
                 <a
-                  href="https://www.google.es/maps/place/Restaurante+Lonja/@39.6592413,-0.213512,17z/data=!4m12!1m6!3m5!1s0xd60161afd533b4d:0x3341f81777ddebc4!2sRestaurante+Lonja!8m2!3d39.6591804!4d-0.2133869!3m4!1s0xd60161afd533b4d:0x3341f81777ddebc4!8m2!3d39.6591804!4d-0.2133869?hl=es"
+                  href="https://maps.app.goo.gl/5q2NBwnp1ckggE6Z9"
                   target="”_blank”"
                   ><i class="fa-brands fa-google-plus-g"></i></a>
                 <a
